<resources>
    <string name="app_name">app</string>
    <string name="message">Message</string>
    <string name="message_from_client">Message</string>
    <string name="send_message_to_server">Send</string>
    <string name="empty_message">&lt;Empty Message&gt;</string>
    <string name="text_view_format">%1$s [%2$s]</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Ip_server">ip Server</string>
    <string name="name">Name</string>
    <string name="ip_server">ip server</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avt_user">avt User</string>
    <string name="img_send">image send\n</string>
    <string name="insert_image">insert image</string>
    <string name="ip">Ip</string>

</resources>